@@ -265,3 +265,6 @@ CB_CONFIG_SUPPORT (cb_incorrect_conf_sec_order, "incorrect-conf-sec-order",
 
 CB_CONFIG_SUPPORT (cb_define_constant_directive, "define-constant-directive",
 	_("allow >> DEFINE CONSTANT var AS literal")) /* OpenCOBOL/GnuCOBOL extension */
+
+CB_CONFIG_SUPPORT (cb_free_redefines_position, "free-redefines-position",
+	_("REDEFINES clause not following entry-name in definition"))
