@@ -201,6 +201,7 @@ reference-out-of-declaratives:		error  # not verified yet
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		error
+free-redefines-position:		unconformable
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
