@@ -35,8 +35,8 @@
 #word-length:			127
 word-length:			61
 literal-length:			8192
-numeric-literal-length:	38
-pic-length:				255
+numeric-literal-length:		38
+pic-length:			255
 
 # Allow complex OCCURS DEPENDING ON
 complex-odo:			yes
@@ -86,10 +86,10 @@ synchronized-clause:			ok
 top-level-occurs-clause:		ok
 value-of-clause:			+obsolete
 numeric-boolean:			ok
-hexadecimal-boolean:		ok
+hexadecimal-boolean:			ok
 national-literals:			ok
 hexadecimal-national-literals:		ok
-acu-literals:			ok
+acu-literals:				ok
 word-continuation:			ok
 not-exception-before-exception:		+warning
 accept-display-extensions:		ok
@@ -101,6 +101,7 @@ reference-out-of-declaratives:		+warning
 numeric-value-for-edited-item:		+warning
 incorrect-conf-sec-order:		+warning
 define-constant-directive:		+obsolete
+free-redefines-position:		ok
 
 
 # use complete word list
