@@ -197,7 +197,7 @@ numeric-boolean:			unconformable
 hexadecimal-boolean:			unconformable
 national-literals:			ok
 hexadecimal-national-literals:		unconformable
-acu-literals:			unconformable
+acu-literals:				unconformable
 word-continuation:			obsolete	# even for literals (as it added concatenation of literals by &)!
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
@@ -209,6 +209,7 @@ reference-out-of-declaratives:		error  # not verified yet
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		error
+free-redefines-position:		unconformable
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
