@@ -1,4 +1,8 @@
 
+2017-09-16  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y, config.def: added free-redefines-position config option.
+
 2017-09-10  Edward Hart <edward.dan.hart@gmail.com>
 
 	* tree.c (cb_int): corrected bitmask.
